--- a/app/tasks/build.template
+++ b/app/tasks/build.template
@@ -1,7 +1,7 @@
 gulp.task('clean', require('del').bind(null, ['tmp', 'dist']));
 
 gulp.task('build', ['appBuild', 'images', 'extras'], function () {
-  return gulp.src('dist/**/*').pipe(plugins.size({title: 'build', gzip: false}));
+  return gulp.src('dist/**/*').pipe($.size({title: 'build', gzip: false}));
 });
 
 gulp.task('default', ['clean'], function () {
