--- a/app/tasks/scripts.template
+++ b/app/tasks/scripts.template
@@ -1,5 +1,5 @@
 gulp.task('scripts', ['coffee'], function () {
   return gulp.src(['src/scripts/**/*.js', 'src/app/**/*.js'])
-  .pipe(plugins.uglify())
+  .pipe($.uglify())
   .pipe(gulp.dest('dist/scripts.min'));
 });
